<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.oneten.alihaider.msg.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="ENC MESSAGING"
                android:textColor="#330011"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- This FrameLayout insets its children based on system windows using
                 android:fitsSystemWindows. -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etKey1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/key1_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/etKey2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/key2_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />
            </LinearLayout>

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#999900"
                android:hint="@string/message_hint"
                android:textSize="30dp"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/button_text"
                    android:textSize="30dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="Copy\nCode"
                    android:textSize="15dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="20dp"
                android:text="@string/result_hint"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
